# Metapic

./: .gitignore  CHANGELOG.md  GITHUB_SETUP_INSTRUCTIONS.md  HOWTO.md  MetaPic.spec  PROJECT_INFO.txt  PUSH_TO_GITHUB.bat  README.md  README_ENHANCED.md  Readme.md  build_dev.bat  build_exe.bat  check_deps.py  gui_main.py  launch_metapicpick.py  metapicpick.py  organize_project.bat  pyproject.toml  requirements.txt  requirements_build.txt  run.bat  tag_consolidation_rules.json  test_gui_startup.py  verify_build.bat
config/: settings.py
core/: advanced_tag_consolidation.py  model_name_manager.py  optimized_statistics_tracker.py  statistics_tab.py  statistics_tracker.py
docs/: ADVANCED_TAG_CONSOLIDATION_GUIDE.md  BUILD_INSTRUCTIONS.md  BUILD_RESULTS.md  CATEGORY_MANAGEMENT_FEATURE_SUMMARY.md  COMPREHENSIVE_IMPROVEMENT_RECOMMENDATIONS.md  CONSOLIDATION_FIX_SUMMARY.md  ENHANCED_PARSERS_README.md  FEATURES_SUMMARY.md  FIX_SUMMARY.md  FOLDER_STRUCTURE.md  IMPLEMENTATION_GUIDE.md  INSTALLATION_SUCCESS.md  MODEL_MANAGER_FIX.md  MODEL_NAME_FEATURE_SUMMARY.md  PARSER_CONSOLIDATION_SUMMARY.md  README.md  SCRIPTS_CLEANUP_SUMMARY.md  TABBED_INTERFACE_GUIDE.md  TAG_CLASSIFICATION_FIX_SUMMARY.md  WEBPMUX_FIX_SUMMARY.md
parsers/: automatic1111_parser.py  comfyui_parser.py  general_ai_parser.py  novelai_parser.py
scripts/: build.bat  pack_release.ps1  package.bat  run.bat  setup.bat
test/: test_metadata_tab.py  test_sanity.py
tests/: compare_metadata_versions.py  example_enhanced_usage.py  test_consolidated_parsers.py  test_consolidation_fix.py  test_enhanced_parsers.py  (+5 more)
(+33 files in other folders)
