[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"


[project]
name = "MetaPic"
version = "0.1.0"
description = "MetaPic: fast, pluggable AI-image metadata pipeline (extract, parse, normalize, edit, bulk ops)."
readme = "README.md"
authors = [{name = "You"}]
requires-python = ">=3.10"
dependencies = [
"typer>=0.12",
"pydantic>=2.7",
"rich>=13.7",
"pillow>=10.0",
"python-dateutil>=2.9",
"orjson>=3.10",
"tqdm>=4.66",
"psutil>=5.9",
"pyexiftool>=0.5.6",
"pandas>=2.2",
"pyyaml>=6.0",
"platformdirs>=4.2",
]


[project.optional-dependencies]
ui = [
"PySide6>=6.7",
]


[project.scripts]
metapic = "metapic.cli:app"
metapic-gui = "metapic.gui.enhanced_app:main"


[tool.hatch.build.targets.wheel]
packages = ["src/metapic"]


[tool.hatch.envs.default]
features = []


[tool.hatch.envs.ui]
features = ["ui"]